@startuml
left to right direction



namespace szakdoga {
	rectangle main {
	}

	namespace core {
		class App {
		}
		class Camera {
		}
		class CameraManipulator {
		}
		class CompShader {
		}
		class Framebuffer {
		}
		class Skybox {
		}
		class Texture2D {
		}
	}
}



szakdoga.main --> szakdoga.core.App

szakdoga.core.App *-- szakdoga.core.Camera
szakdoga.core.App *-- szakdoga.core.CameraManipulator
szakdoga.core.App "4" *-- szakdoga.core.CompShader
szakdoga.core.App *-- szakdoga.core.Framebuffer
szakdoga.core.App *-- szakdoga.core.Skybox
szakdoga.core.App "3" *-- szakdoga.core.Texture2D
szakdoga.core.CameraManipulator o-- szakdoga.core.Camera
szakdoga.core.Framebuffer *-- szakdoga.core.Texture2D



@enduml
